# agentflow-mcp

./: .cleanup-plan.txt  .env.example  .gitignore  .openspec  APC_MCP_INTEGRATION.md  API_VALIDATION_SYSTEM.md  CHANGELOG.md  CHANGELOG_PHASE2.md  CONTEXT_CURATOR_TEST_REPORT.md  CONTEXT_MINIMAL_SUMMARY.md  CONTRIBUTING.md  DASHBOARD_QUICKSTART.md  DASHBOARD_SUMMARY.md  DELEGATION_FAILURE_ANALYSIS.md  DELEGATION_STATUS_2025-10-14.md  DELEGATION_SYSTEM_FIXES_2025-10-14.md  DELEGATION_SYSTEM_TESTS_COMPLETE.md  FINAL_RESEARCH_SYNTHESIS.md  FINAL_SESSION_SUMMARY_2025-10-14.md  INSTALL.md  INTEGRATION_FRAMEWORK_IMPLEMENTATION.md  MCP_INTEGRATION_GUIDE.md  MCP_STATUS_REPORT_2025-10-14.md  MCP_SUCCESS_FINAL.md  MCP_TESTING_PLAN.md  MCP_TEST_PROMPT.md  MCP_USAGE_LOG.md  ORCHESTRATION_ARCHITECTURE.md  PERPLEXITY_RESEARCH.md  PERPLEXITY_RESEARCH_PROMPT.md  PHASE1_COMPLETE_2025-10-14.md  PHASE2_COMPLETION_REPORT.md  POLISHING_COMPLETE_2025-10-14.md  PROJECT_STATE.md  QUALITY_AWARE_ROUTING_QUICKSTART.md  QUICK_INSTALL.md  README.md  README_DASHBOARD.md  SESSION_2025-10-13_TAGGED.md  SESSION_2025-10-14_APC_INTEGRATION_TAGGED.md  (+26 more)
.claude/: delegation_priority_rules.md
agentflow/: .env.template  __init__.py  requirements.txt
agentflow/adapters/: agentflow_claude_adapter.py  agentflow_universal_adapter.py
agentflow/apc_runtime/: __init__.py  event_bus.py  example_wireup.py  state_machine.py
agentflow/core/: context_generator.py  (+1 more)
apc-mcp/: .env.example  Makefile  QUICKSTART.md  README.md  SESSION_PHASE1_COMPLETE_AWAITING_TESTS.md  docker-compose.yml
apc-mcp/python/: pyproject.toml
apc-mcp/python/src/apc_runtime/: lru.py  pgvector_dao.py
archive/: README.md  test_session_001_20251014_145126.json
config/: apc_crc_policy.yaml  apc_crc_runtime.yaml
data/: context_curator_test_results.json  phase2_delegation_tasks.json  recovery_test_results.json  test_delegation_system_results.json  test_recovery_SESSION_2025-10-13_TAGGED.json  test_recovery_SESSION_COMPLETE_2025-10-13.json  test_recovery_SESSION_SUMMARY_2025-10-14.json
docs/: APC_INTEGRATION_PLAN.md  APC_QUALITY_GUARDIAN.md  COLLABORATIVE_DESIGN_SESSION.md  COST_TRACKING.md  COST_TRACKING_FLOW.md  COST_TRACKING_QUICK_REF.md  DESIGN_DECISIONS_FINAL.md  MCP_INTEGRATION_STRATEGY.md  PERPLEXITY_CRC_SYNTHESIS.md  PHASE2_COMPLETION.md  PHASE2_ERROR_HANDLING_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  README.md  SESSION_CONTEXT_CURATOR.md  SESSION_RECOVERY_AGENT.md  error-handling.md
examples/: README.md  cost_tracking_demo.py  error_handling_demo.py  generate_github_integration.py
openspec/: README.md
scripts/: INSTALL_MCP_SERVERS.sh  README.md  monitor_mcp.sh
tests/: test_apc_direct.py  test_apc_integration.py  test_apc_phase1.py  test_e2e_integration.py  test_integration_framework.py  test_logging_metrics.py  test_mcp_handshake.py  test_pattern_replication.py  test_phase2_integration.py  test_session_recovery.py  test_smart_orchestrator_error_handling.py  test_token_tracking.py
(+137 files in other folders)
