[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apc-runtime"
version = "0.1.0"
description = "APC runtime (CRC bus, state machine, pgvector DAO)"
authors = [{name="Gontrand", email="gontrand@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "psycopg[binary]>=3.2.1",
  "typing-extensions>=4.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
